# mcp-git-worktree

./: .mcpbignore  Dockerfile  Makefile  README.md  manifest.json  pyproject.toml  server.json
src/mcp_git_worktree/: __init__.py  api_models.py  config.py  manifest.py  risk_classifier.py  server.py  worktree_manager.py
tests/: __init__.py  conftest.py  test_manifest.py  test_risk_classifier.py  test_server.py  test_worktree_manager.py
